<!--
  ~ Copyright 2017 75py
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Call Confirm</string>
    <string name="version">Version %1$s</string>
    <string name="open_source_license">Open source license</string>
    <string name="source_code">Source code</string>

    <string name="need_permission">Need permission!</string>
    <string name="msg_need_permission">"Please grant 'Contacts' and 'Phone' permission."</string>
    <string name="app_setting">App setting</string>
    <string name="close">Close</string>

    <string name="confirm_title">Really call?</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Cancel calling</string>
    <string name="unregistered">Unregistered</string>
</resources>
