<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 75py
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.nagopy.android.callconfirm.BuildConfig" />

        <variable
            name="viewModel"
            type="com.nagopy.android.callconfirm.viewmodel.StartViewModel" />

    </data>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_padding">

        <TextView
            android:id="@+id/permissionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/msg_need_permission"
            android:textColor="@color/colorAccent"
            android:visibility="@{viewModel.arePermissionsGranted ? View.GONE : View.VISIBLE}" />

        <Button
            android:id="@+id/startSettingApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/permissionStatus"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_padding"
            android:onClick="@{viewModel.startAppSetting}"
            android:text="@string/app_setting"
            android:visibility="@{viewModel.arePermissionsGranted ? View.GONE : View.VISIBLE}"
            app:layout_widthPercent="70%" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_alignWithParentIfMissing="true"
            android:layout_below="@+id/startSettingApp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/padding_small"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:layout_centerHorizontal="true"
            android:text="@{@string/version(BuildConfig.VERSION_NAME)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="Version 1.0.0" />

        <Button
            android:id="@+id/openSourceLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_large"
            android:onClick="@{viewModel.startLicenseActivity}"
            android:text="@string/open_source_license"
            app:layout_widthPercent="70%" />

        <Button
            android:id="@+id/sourceCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/openSourceLicense"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_small"
            android:onClick="@{viewModel.openGitHub}"
            android:text="@string/source_code"
            app:layout_widthPercent="70%" />

    </android.support.percent.PercentRelativeLayout>


</layout>
